src/components/menu/menu.scss
@import '../../style/internal/mdc-variables';

$menu-item-background-color: #ebebeb;

:host {
    display: inline-block;
}

:host([hidden]) {
    display: none;
}

.menu__trigger {
    border-color: transparent;
    border-width: pxToRem(1);
    border-style: solid;
    background: none;
    color: #afafaf;
    height: pxToRem(36);

    &-enabled {
        &:hover {
            border-color: #afafaf;
            color: #636363;
        }
    }
}

.mdc-menu-surface--anchor {
    position: relative;

    limel-portal {
        &.limel-portal--fixed {
            position: fixed;
        }

        &:not(.limel-portal--fixed) {
            position: absolute;

            :host(*[open-direction='left']) & {
                right: 0;
                bottom: 0;
            }
        }
    }
}

